generate swagger docs
